# Matrix

./: .aliases  .claude.md  .gitignore  ARCHITECTURE.md  ARCHITECTURE_GUI.md  CLAUDE.md  Cargo-debug.toml  Cargo.gui.toml  Cargo.launcher.toml  Cargo.toml  DEVELOPMENT.md  DOCK_SETUP.md  IMPLEMENTATION.md  INITIAL_IMPLEMENTATION.md  NEXT_STEPS.md  README.md  README_ORIGINNAL.md  SIDEBAR.md  SimpleMatrixLauncher.app.command  build_gui.sh  ci  create_app.sh  create_app_gui.sh  create_final_app.sh  debug.command  debug_launch.sh  debug_matrix.rs  direct_launch.sh  fix_dock_icon.sh  fix_permissions.sh  launch_matrix.command  launch_matrix.sh  launch_terminal.sh  launcher.rs  launcher.swift  matrix_dock_icon.sh  matrix_preview.py  open_gui_project.sh  rebuild.sh  run_direct.command  (+7 more)
icons/: matrix_icon.icns
matrix-gui/: Cargo.toml  build.sh
matrix-gui/src/: lib.rs  main.rs
matrix-gui/src/components/: mod.rs  sidebar.rs  tooltip.rs
matrix-gui/src/gui/: lib.rs  main.rs
matrix-gui/src/gui/layout/: manager.rs
matrix-gui/src/gui/styles/: colors.rs  mod.rs  theme.rs
matrix-gui/src/terminal/: emulator.rs  mod.rs
matrix-gui/src/utils/: font.rs  keyboard.rs  mod.rs
simple-gui/: Cargo.toml
simple-gui/src/: main.rs  main.rs.bak
simple-gui/src/terminal/: emulator.rs  mod.rs  window.rs
src/: app.rs  main.rs
src/config/: settings.rs
src/gui/terminal/: window.rs
src/terminal/: buffer.rs  events.rs  mod.rs  process.rs  terminal.rs  window.rs
src/ui/: layout.rs  mod.rs  sidebar.rs  style.rs  widgets.rs  window_manager.rs
