[package]
name = "Matrix"
version = "0.1.0"
edition = "2021"
description = "A powerful terminal multiplexer designed for developers who need advanced organization, customization, and navigation features"
authors = ["Josh Kornreich"]

[dependencies]
crossterm = "0.27.0"
ratatui = "0.25.0"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
config = "0.14.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
portable-pty = "0.8.1"
async-trait = "0.1.74"
atty = "0.2.14"