[package]
name = "matrix_simple_gui"
version = "0.1.0"
edition = "2021"
description = "A Matrix-themed terminal multiplexer with GUI"
authors = ["Josh Kornreich"]

[dependencies]
# GUI Framework
iced = { version = "0.10", features = ["canvas", "debug", "tokio"] }

# Async support
tokio = { version = "1.32.0", features = ["full"] }

# General utilities
uuid = { version = "1.4.1", features = ["v4"] }
log = "0.4.20"
env_logger = "0.10.0"
rand = "0.8.5"